updated readme, package info

--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -23,6 +23,10 @@
     <a href="http://github.com/thomasrstorey/nayar/">github</a>
     <h4>Contributors</h4>
     <p>Thomas R Storey | <a href="http://github.com/thomasrstorey/">github</a> <a href="mailto:storey.thomas@gmail.com">email</a></p>
+    <h4>Sponsors</h4>
+    <p>Kristin Lucas | <a href="http://kristinlucas.com/">website</a> </p>
+    <h4>Acknowledgements</h4>
+    <p>Thanks so much to Kristin for providing the impetus, inspiration, testing, and funding for this project!</p>
     </div>
   {{> foot}}
 </html>
