added opacity animation option in accordance with Layar API v8.4

--- a/app/templates/animation.hbs
+++ b/app/templates/animation.hbs
@@ -37,6 +37,7 @@
       <option value='translate' {{#selected type 'translate'}}{{/selected}}>translate</option>
       <option value='rotate' {{#selected type 'rotate'}}{{/selected}}>rotate</option>
       <option value='scale' {{#selected type 'scale'}}{{/selected}}>scale</option>
+      <option value='opacity' {{#selected type 'opacity'}}{{/selected}}>opacity</option>
     </select>
     </div><div class="three columns">
       <label>Length</label>
