--- a/app/templates/new.hbs
+++ b/app/templates/new.hbs
@@ -134,6 +134,7 @@
       <option value='translate'>translate</option>
       <option value='rotate'>rotate</option>
       <option value='scale'>scale</option>
+      <option value='opacity'>opacity</option>
     </select>
     </div><div class="three columns">
       <label>Length</label>
