updated help page

--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -10,9 +10,12 @@
   {{> head}}
     <div class="row">
     <h4>Version</h4>
-      <p>1.1.2</p>
+      <p>1.1.3</p>
     <h4>Recent Changes</h4>
     <ul>
+      <li>
+        Opacity animation added in accordance with Layar API v8.4
+      </li>
       <li>Improved error handling. If a database error occurs, the message will propagate up to the user with a helpful error code that can help diagnose the problem.</li>
       <li>Improved stability</li>
       <li>User system - first user is admin, subsequent users are users. Admin has elevated privileges, like the ability to see/edit any layer and the ability to delete and activate other users. Users can only see their own layers and cannot manage user info.</li>
