made the add layer buttons ABP proof

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -43,11 +43,11 @@ tr:hover {
   margin-top: 20px;
 }
 
-.top-add {
+.top-add-button {
   float: right;
 }
 
-.bottom-add {
+.bottom-add-button {
   float: left;
 }
 
