--- a/app/templates/layer.hbs
+++ b/app/templates/layer.hbs
@@ -63,7 +63,7 @@
     <div class="row">
     <h3>POIs</h3>
     {{#if pois}}
-    <button class="button-primary top-add add" add="poi" layer-id="{{layer.id}}">
+    <button class="button-primary top-add-button add" add="poi" layer-id="{{layer.id}}">
       <i class="fa fa-plus-square-o"></i> New POI
     </button>
     <table>
@@ -99,7 +99,7 @@
     {{else}}
     <p>No POIs yet. Click the 'New POI' button to add a new POI.</p>
     {{/if}}
-    <button class="button-primary bottom-add add" add="poi" layer-id="{{layer.id}}" >
+    <button class="button-primary bottom-add-button add" add="poi" layer-id="{{layer.id}}" >
       <i class="fa fa-plus-square-o"></i> New POI
     </button>
     </div>
